Improve group refresh and deletion
